# tracer-ocl

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  build.sh  config.yaml  docs.conf
include/glad/: glad.h
meshes/: cone.iqm  cornell.iqe  cornell.iqm  cube.iqe  cube.iqm  iqo.iqm  sphere.iqm  suzanne.iqm  tetrahedron.iqm  triangle.iqm
scenes/: cornell.yaml
src/: Drawer.cpp  Drawer.hpp  GLutils.cpp  GLutils.hpp  Meshloader.cpp  Meshloader.hpp  Primitives.hpp  Rasterizer.cpp  Rasterizer.hpp  Renderer.hpp  Scene.cpp  Scene.hpp  Tracer.cpp  Tracer.h  Tracer.hpp  Utils.cpp  Utils.hpp  build.ninja  glad.c  imgui_impl_glfw_gl3.cpp  main.cpp
src/kernels/: brdf.cl  brdf.h  bvh.h  intersect.cl  intersect.h  options.h  primitives.cl  primitives.h  quaternion.cl  quaternion.h  shader.cl  shader.h  tracer.cl  tracer.h
src/shaders/: drawer.frag  drawer.vert  simple.frag  simple.vert
